<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="purchase_price">Purchase Price:</string>
    <string name="down_payment">Down Payment:</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="loan_duration">Loan Duration:</string>
    <string name="duration">10 Years</string>
    <string name="wmrk">aGF1cHRrZXJuCg==</string>
</resources>