<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20px"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/purchase_price" />

            <Space
                android:layout_width="28dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/purchaseEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/down_payment" />

            <Space
                android:layout_width="28dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/downPaymentEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/interest_rate" />

            <Space
                android:layout_width="28dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/interestRateEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:singleLine="true"
                android:text="@string/loan_duration" />

            <Space
                android:layout_width="28dp"
                android:layout_height="match_parent" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="10" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20px"
            android:gravity="center">

            <Space
                android:layout_width="99dp"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="28dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/loandurationvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/duration" />

        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/check" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="411dp"
        android:layout_height="535dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="0dp" >

    </WebView>

    <TextView
        android:id="@+id/wmrk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:editable="false"
        android:enabled="false"
        android:text="@string/wmrk"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="723dp" />

</androidx.constraintlayout.widget.ConstraintLayout>